tests/unchecked_haste_module_vs_lib/unchecked_haste_module_vs_lib.exp
Error ---------------------------------------------------------------------------------------------------- test.js:13:17

Cannot assign `buffer.INSPECT_MAX_BYTES` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:13:17
   13| var x: string = buffer.INSPECT_MAX_BYTES; // error, number ~/> string
                       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   lib.js:2:34
    2|   declare var INSPECT_MAX_BYTES: number;
                                        ^^^^^^ [1]
   test.js:13:8
   13| var x: string = buffer.INSPECT_MAX_BYTES; // error, number ~/> string
              ^^^^^^ [2]



Found 1 error
